# hip_cuda_examples

./: CMakeLists.txt  Makefile  README.md  cu_matrix_mul.cu  cu_matrix_mul.h  cu_vec_add.hpp  hip_matrix_mul.cpp  hip_matrix_mul.h  matrixmul.h  matrixmul.hpp  test_mm_mul.cpp  timer.cpp  timer.h  timer.hpp
amd_matrix_core/: CMakeLists.txt  hip_matrix_mul.hpp  hip_matrix_mul_fp16.cpp  hip_matrix_mul_fp32.cpp  hip_matrix_mul_fp64.cpp  hip_matrix_mul_int8.cpp  test_mm_mul_fp16.cpp  test_mm_mul_fp32.cpp  test_mm_mul_fp64.cpp  test_mm_mul_int8.cpp
amd_sparse_matrix/: CMakeLists.txt  hip_matrix_mul.hpp  hip_matrix_mul_fp16.cpp  test_mm_mul_fp16.cpp
amd_wmma/: CMakeLists.txt  test_wmma.cpp
common/: init_vec.hpp  layernorm_fuse.cpp  layernorm_fuse.hpp  matrixmul.hpp  timer.cpp  timer.hpp  utilities.hpp
cuda/: CMakeLists.txt  cu_layernorm_fuse.cpp  cu_layernorm_fuse.cu  cu_layernorm_fuse.hpp  cu_matrix_mul.cu  cu_matrix_mul.hpp  cu_reduction.cu  cu_reduction.hpp  cu_vec_add.cu  cu_vec_add.hpp  test_layernorm_fuse.cpp  test_reduction.cpp  test_vec_add.cpp  test_vec_add_event.cu
cuda_rt/: CMakeLists.txt  test_mm_kernel_launch_event.cu
hip/: CMakeLists.txt  hip_layernorm.cpp  hip_layernorm.hpp  hip_layernorm_fuse.cpp  hip_layernorm_fuse.hpp  hip_matrix_mul.cpp  hip_matrix_mul.hpp  hip_reduction.cpp  hip_reduction.hpp  hip_sqrt.cpp  hip_sqrt.hpp  hip_vec_add.cpp  hip_vec_add.hpp  test_add_matrix.cpp  test_add_matrix_half.cpp  test_atomic_add.cpp  test_atomic_bf16.cpp  test_cross_lane.cpp  test_exec_mask.cpp  test_layernorm.cpp  test_layernorm_fuse.cpp  test_mm_mul.cpp  test_opt_atomic_add.cpp  test_prefix_sum.cpp  test_prefix_sum_one_wave.cpp  test_reduce_one_wave.cpp  test_reduction.cpp  test_smid.cpp  test_sqrt.cpp  test_vec_add.cpp
hip-python/: icache_flush.py  test_vecadd.py
hip_rt/: CMakeLists.txt  test_kernel_launch.cpp  test_mm_kernel_launch.cpp  test_mm_kernel_launch_event.cpp  test_mm_mod_kernel_launch.cpp  test_module_kernel_launch.cpp
others/: CMakeLists.txt  a.out  test_swizzle.cpp
rocblas/: CMakeLists.txt  rocblas_matmul.cpp  rocblas_matmul.hpp  test_rocblas_matmul.cpp
scripts/: run_mi200.sh
